--- a/Win8.1/PhoneNumberFormatter.Win8.1/PhoneNumberFormatter.Win8.1.csproj
+++ b/Win8.1/PhoneNumberFormatter.Win8.1/PhoneNumberFormatter.Win8.1.csproj
@@ -108,8 +108,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CountryCodeRetriever.cs" />
+    <Compile Include="CountryMetaDataRetriever.cs" />
     <Compile Include="CountryMetaData.cs" />
+    <Compile Include="PhoneNumber.cs" />
     <Compile Include="PhoneNumberFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
