--- a/Win8.1/PhoneNumberFormatter.Win8.1/PhoneNumberFormatter.Win8.1.csproj
+++ b/Win8.1/PhoneNumberFormatter.Win8.1/PhoneNumberFormatter.Win8.1.csproj
@@ -118,6 +118,10 @@
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>@PowerShell Copy-Item $(TargetPath) $(ProjectDir)\..\Deploy
+@PowerShell Copy-Item $(TargetDir)\CountryCodes.txt $(ProjectDir)\..\Deploy</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
