--- a/Win8.1/Tests/PhoneNumberFormatter.Win8.1.Tests/PhoneNumberFormatter.Win8.1.Tests.csproj
+++ b/Win8.1/Tests/PhoneNumberFormatter.Win8.1.Tests/PhoneNumberFormatter.Win8.1.Tests.csproj
@@ -112,6 +112,7 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PhoneNumberFormatterAsyncTests.cs" />
     <Compile Include="PhoneNumberFormatterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
